--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,6 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "",
-    "password": "",
-    "database": "",
-    "host": "",
-    "dialect": "postgres"
+    "use_env_variable": "DATABASE_URL"
   }
 }
