--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "config": "1.26.1",
     "es6-deferred": "1.3.0",
     "es6-promise": "4.0.5",
+    "express": "4.15.3",
     "forever": "0.15.1",
     "i18next": "^8.4.2",
     "lodash": "4.17.4",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/config": "0.0.32",
     "@types/es6-promise": "0.0.32",
+    "@types/express": "4.0.36",
     "@types/i18next": "^2.3.38",
     "@types/lodash": "4.14.52",
     "@types/moment": "2.13.0",
