--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "@types/config": "0.0.32",
     "@types/es6-promise": "0.0.32",
     "@types/express": "4.0.36",
-    "@types/i18next": "^2.3.38",
+    "@types/i18next": "2.3.38",
     "@types/lodash": "4.14.52",
     "@types/moment": "2.13.0",
     "@types/node": "7.0.5",
     "@types/pg": "6.1.41",
-    "@types/sequelize": "^4.0.62",
+    "@types/sequelize": "4.0.62",
     "awesome-typescript-loader": "3.0.4",
     "forever": "0.15.1",
     "tslint": "5.4.3",
