--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "es6-promise": "4.0.5",
     "express": "4.15.3",
     "forever": "0.15.1",
-    "i18next": "^8.4.2",
+    "i18next": "8.4.2",
     "lodash": "4.17.4",
     "moment": "2.18.1",
     "node-emoji": "1.5.1",
