--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
   "author": "Teddy Lok <teddydesu@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/config": "0.0.32",
     "@types/es6-promise": "0.0.32",
+    "@types/express": "4.0.36",
+    "@types/i18next": "2.3.38",
     "@types/lodash": "4.14.52",
+    "@types/moment": "2.13.0",
     "@types/node": "7.0.5",
+    "@types/pg": "6.1.41",
+    "@types/sequelize": "4.0.62",
     "awesome-typescript-loader": "3.0.4",
     "config": "1.26.1",
     "es6-deferred": "1.3.0",
@@ -35,26 +41,12 @@
     "pg": "6.4.0",
     "sequelize": "3.30.1",
     "sequelize-cli": "2.7.0",
+    "tslint": "5.4.3",
     "typescript": "2.1.6",
     "webpack": "2.2.1"
   },
   "engines": {
-    "node": ">=6.0"
+    "node": ">=7.0"
   },
-  "devDependencies": {
-    "@types/config": "0.0.32",
-    "@types/es6-promise": "0.0.32",
-    "@types/express": "4.0.36",
-    "@types/i18next": "2.3.38",
-    "@types/lodash": "4.14.52",
-    "@types/moment": "2.13.0",
-    "@types/node": "7.0.5",
-    "@types/pg": "6.1.41",
-    "@types/sequelize": "4.0.62",
-    "awesome-typescript-loader": "3.0.4",
-    "forever": "0.15.1",
-    "tslint": "5.4.3",
-    "typescript": "2.1.6",
-    "webpack": "2.2.1"
-  }
+  "devDependencies": {}
 }
