--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@types/lodash": "4.14.52",
     "@types/moment": "2.13.0",
     "@types/node": "7.0.5",
+    "@types/node-schedule": "1.2.0",
     "@types/pg": "6.1.41",
+    "@types/request-promise": "4.1.35",
     "@types/sequelize": "4.0.62",
     "awesome-typescript-loader": "3.0.4",
     "config": "1.26.1",
@@ -36,9 +38,11 @@
     "lodash": "4.17.4",
     "moment": "2.18.1",
     "node-emoji": "1.5.1",
+    "node-schedule": "1.2.3",
     "node-telegram-bot-api": "0.27.0",
     "nodemon": "1.11.0",
     "pg": "6.4.0",
+    "request-promise": "4.2.1",
     "sequelize": "3.30.1",
     "sequelize-cli": "2.7.0",
     "tslint": "5.4.3",
