--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/base-64": "0.1.2",
     "@types/config": "0.0.32",
+    "@types/crypto-js": "^3.1.33",
     "@types/es6-promise": "0.0.32",
     "@types/express": "4.0.36",
     "@types/i18next": "2.3.38",
@@ -32,6 +33,7 @@
     "awesome-typescript-loader": "3.0.4",
     "base-64": "0.1.0",
     "config": "1.26.1",
+    "crypto-js": "^3.1.9-1",
     "es6-deferred": "1.3.0",
     "es6-promise": "4.0.5",
     "express": "4.15.3",
